# clippy_lint_tester

./: .gitignore  BugsFound.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: attr_cleaning.rs  clippy_workspace.rs  lib.rs  main.rs  markdown_formatting.rs  progress_bar.rs
tests/: integration.rs
tests/clippy_workspaces/missing_toolchain/: rust-toolchain
tests/targets/build_failure/a/: Cargo.toml
tests/targets/build_failure/a/src/: lib.rs
tests/targets/check_allows/a/: Cargo.toml
tests/targets/check_allows/a/src/: main.rs
tests/targets/default/a/: Cargo.toml
tests/targets/default/a/src/: main.rs
tests/targets/fix/a/: Cargo.toml
tests/targets/fix/a/src/: main.rs
