[package]
edition = "2021"
name = "clippy_lint_tester"
version = "0.1.0"
authors = ["Michael Wright <mikerite@lavabit.com>"]
default-run = "clippy_lint_tester"

[dependencies]
anyhow = "1"
argh = "0.1.6"
atty = "0.2.14"
cargo_metadata = "0.14"
filetime = "0.2.15"
flate2 = "1"
peeking_take_while = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
shell-escape = "0.1.5"
syn = { version = "1", features = ["extra-traits", "full", "visit"] }
tar = "0.4"
toml = "0.5"
ureq = { version = "2", features = ["json"] }
url = "2"
unicode-segmentation = "1"
walkdir = "2"

[dev-dependencies]
expect-test = "1"
indoc = "1"
regex = "1"
tempfile = "3"

[lib]
doctest = false

[[bin]]
name = "clean_source"
test = false

[[bin]]
name = "clean_config"
test = false

[[bin]]
name = "clippy_lint_tester"
test = false

[[bin]]
name = "download_crates"
test = false

[[bin]]
name = "touch_crate_roots"
test = false
